"feat(branding): add new website logo replacement"

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
     <div class="main-wrapper" id="mainWrapper">
         <div class="content-area">
             <div class="header">
-                <img src="{{ url_for('static', filename='logo.png') }}" class="logo">
+                <img src="static/images/logo2.png" class="logo">
             </div>
 
             <div class="toolbar">
